はてな は予約語

--- a/kataribe.toml
+++ b/kataribe.toml
@@ -96,8 +96,8 @@ regexp = 'POST /stars\?user=[a-z0-9]+&keyword=.*'
 name = 'POST /stars?user=[a-z0-9]+&keyword=.*'
 
 [[bundle]]
-regexp = 'GET /?page=[0-9]+'
-name = 'GET /?page=[0-9]+'
+regexp = 'GET /\?page=[0-9]+'
+name = 'GET /\?page=[0-9]+'
 
 #[[bundle]]
 #regexp = '^(GET|HEAD) /stylesheets/'
