--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,6 @@ on:
   push:
     branches:
       - main
-    tags:
-      - deploy
 name: run ssh
 jobs:
   run-ssh:
@@ -18,6 +16,6 @@ jobs:
           config: ${{ secrets.CONFIG }} 
           if_key_exists: fail
       - name: git pull
-        run: ssh isucon "cd isucon && git checkout ${{CI_COMMIT_BRANCH}} && git pull"
+        run: ssh isucon "cd isucon && git checkout main && git pull"
       - name: make gogo
         run: ssh isucon "export PATH=/home/isucon/local/go/bin:$PATH && cd isucon && make gogo"
