--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,21 @@ on:
   push:
     branches:
       - main
+env:
+  SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+  SLACK_USERNAME: DeployBot
+  SLACK_CHANNEL: develop
 name: run ssh
 jobs:
   run-ssh:
     runs-on: ubuntu-latest
     steps:
+      - name: Slack Notification on Start
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_TITLE: Deploy Start
+          SLACK_MESSAGE: deploy走るよ
+          SLACK_COLOR: good
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
@@ -19,3 +29,15 @@ jobs:
         run: ssh isucon "cd isucon && git checkout main && git pull"
       - name: make gogo
         run: ssh isucon "export PATH=/home/isucon/local/go/bin:$PATH && cd isucon && make gogo"
+      - name: Slack Notification on Success
+        if: ${{ success() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_TITLE: Deploy Success
+          SLACK_COLOR: good
+      - name: Slack Notification on Failure
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_TITLE: Deploy Failure
+          SLACK_COLOR: danger
